--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Launch Academy Catalog</h1>
+    <h1 class="text-center">Launch Academy Catalog</h1>
 
     <div id="all-products">
     </div>
